<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iak.saifulka.quizzy.Quiz1Activity"
    android:background="@drawable/gradient_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/username1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerInParent="true"
            android:background="@android:color/darker_gray" />
        <ScrollView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
<!--kalo soalnya panjang biar bisa scroll terus-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
<!--soal no 1-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/transparent_content">
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/quiz1"/>
<!--ini pilihan jawaban - ini pilihan jawaban - ini pilihan jawaban-->
                <RadioGroup
                    android:id="@+id/pilihan1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/transparent_content">
                    <RadioButton
                        android:id="@+id/salah1a"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Biru"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:id="@+id/salah1b"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Merah"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:layout_margin="10dp"
                        android:id="@+id/jawabanbenar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1"
                        android:onClick="nilai"
                        android:textSize="20sp"
                        android:checked="false"/>

                    <RadioButton
                        android:id="@+id/salah1c"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Putih"
                        android:textSize="20sp"/>
                </RadioGroup>
            </LinearLayout>
<!--soal no 2-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/transparent_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:text="@string/quiz2"/>
                <!--ini pilihan jawaban - ini pilihan jawaban - ini pilihan jawaban-->
                <RadioGroup
                    android:id="@+id/pilihan2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/transparent_content">
                    <RadioButton
                        android:layout_margin="10dp"
                        android:id="@+id/jawabanbenar2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2"
                        android:onClick="nilai"
                        android:textSize="20sp"
                        android:checked="false"/>
                    <RadioButton
                        android:id="@+id/salah2a"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="John Lennon"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:id="@+id/salah2b"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Paul McCartney"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:id="@+id/salah2c"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="George Harrison"
                        android:textSize="20sp"/>
                </RadioGroup>
                </LinearLayout>
<!--soal no 3-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/transparent_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:text="@string/quiz3"/>
                <!--ini pilihan jawaban - ini pilihan jawaban - ini pilihan jawaban-->
                <RadioGroup
                    android:id="@+id/pilihan3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/transparent_content">
                    <RadioButton
                        android:id="@+id/salah3a"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Semeru"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:layout_margin="10dp"
                        android:id="@+id/jawabanbenar3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans3"
                        android:onClick="nilai"
                        android:textSize="20sp"
                        android:checked="false"/>
                    <RadioButton
                        android:id="@+id/salah3b"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Rinjani"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:id="@+id/salah3c"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Krakatau"
                        android:textSize="20sp"/>
                </RadioGroup>
                </LinearLayout>
<!--soal no 4-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/transparent_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:text="@string/quiz4"/>
                <!--ini pilihan jawaban - ini pilihan jawaban - ini pilihan jawaban-->
                <RadioGroup
                    android:id="@+id/pilihan4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/transparent_content">
                    <RadioButton
                        android:id="@+id/salah4a"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Pukul 12 tepat"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:id="@+id/salah4b"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Pukul 7 lewat 20 menit"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:id="@+id/salah4c"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Pukul 6 tepat"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:layout_margin="10dp"
                        android:id="@+id/jawabanbenar4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4"
                        android:onClick="nilai"
                        android:textSize="20sp"
                        android:checked="false"/>
                </RadioGroup>
                </LinearLayout>
<!--soal no 5-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/transparent_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:text="@string/quiz2"/>
                <!--ini pilihan jawaban - ini pilihan jawaban - ini pilihan jawaban-->
                <RadioGroup
                    android:id="@+id/pilihan5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/transparent_content">
                    <RadioButton
                        android:layout_margin="10dp"
                        android:id="@+id/jawabanbenar5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5"
                        android:onClick="nilai"
                        android:textSize="20sp"
                        android:checked="false"/>
                    <RadioButton
                        android:id="@+id/salah5a"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Dono"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:id="@+id/salah5b"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Badil"
                        android:textSize="20sp"/>
                    <RadioButton
                        android:id="@+id/salah5c"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salah"
                        android:text="Nanu"
                        android:textSize="20sp"/>
                </RadioGroup>
                </LinearLayout>
                <TextView
                    android:id="@+id/skor"
                    android:textSize="1dp"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/submit1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:onClick="submit"
                    android:text="Lihat skor"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:background="@drawable/pil_button"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
